--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,6 @@ body {
     background: white;
     font-family: $bodyFont;
     font-size: 1.3rem;   
-    overflow-x: hidden;
 }
 
 img {
